# vibe-giants-decomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  ONBOARDING.md  RE-TRACKER.json  README.md  com_scope.py  ghidra-bridge.example.yaml  re-agent.example.yaml  recomp_stub_renderer.cpp
.claude/commands/: giants-advance.md
RE_docs/: DX7_CALLBACK_ORACLE.md  DX7_D3D7_VTABLE_AUTHORITATIVE.md  DX7_METHOD_MAP.md  DX7_METHOD_MAP_v2.md  DX7_RENDERER_CONTRACT.md  DX7_RENDER_RECIPE.md  INPUT_SYSTEM.md  OBJECT_CREATE_CHILD.md  OBJECT_VTABLE_SYSTEM.md  ODEF_VM.md  SCENE_RENDER_DISPATCH.md  SCENE_SYSTEM.md  TERRAIN_RENDER.md  TEXMEM_HANDLER.md  TEXTURE_LOADER.md  vanilla_3d_camera_candidates.md  vanilla_foundation_post_purge.md
behavior_specs/: README.md  boot_chain_missing_fns.md  boot_sequence.md  intro_timings.md  loading_registry_cursor.md  loading_screen.md  menu_delta_breakdown.md  menu_render.md  menu_render_d3d7_trace.md  menu_system_code.md  orig_dx7_callbacks.md  orig_filetrace.md  orig_filetrace.txt  orig_logo3d_model.md  orig_menu_3d.md  orig_menu_d3d7_recipe.md  orig_vfsopen.md  orig_vfsopen.txt  orig_vfsopen_menu.txt  recomp_logo3d_render.md  recomp_texture_binding_broken.md  vanilla_2d_render_pipeline.md
proxy/: Callbacks.cpp  Callbacks.h  Detour.cpp  Detour.h  DualValidator.cpp  DualValidator.h  HookTable.cpp  HookTable.h  Logger.h  ProxyDef.def  SweepAuto.cpp  proxy_main.cpp
proxy_dx7/: Dx7ProxyDef.def  dx7_proxy_main.cpp
ps2_symbols/: MODULE_INDEX.md  OBJECT_LAYOUT.csv  OBJECT_LAYOUT.md  README.md  SLUS_201.78.functions.txt  SLUS_201.78.rodata_strings.txt  SLUS_201.78.symbols.csv  TYPE_CATALOG.md  apply_renames_ghidra.py  build_rename_table.py  build_type_catalog.py  extract_object_layout.py  extract_ps2_symbols.py  lookup.py  match_pc_ps2.py  match_propagate.py  pc_ps2_matches.csv  pc_ps2_matches.md  pc_ps2_matches_full.csv  pc_ps2_matches_full.md  pc_rename_apply.csv  ps2_reference.py  verify_matches.py  verify_report.txt
reference/patch15/: README.md
scripts/: ExportVanillaDecompiled.java  disasm_exe.py  disasm_fn.py  disasm_gdvsyscreate.py  dx7_disasm.py  frida_camglobals.js  frida_click_inject.js  frida_createtex.js  frida_createtex_run.py  frida_ddraw_recomp.js  frida_ddraw_recomp_run.py  frida_diclick_inject.js  frida_dx7_contract.js  frida_dx7_renderseq.js  frida_dx7_renderseq_run.py  frida_dx7_run.py  frida_enginectx.js  frida_filetrace.js  frida_filetrace_run.py  frida_find_creator.js  frida_find_creator_run.py  frida_frame_seq.js  frida_gdvargs.js  frida_gdvargs_run.py  frida_init_recipe.js  frida_init_recipe_run.py  frida_inject_scene.js  frida_intro_recipe.js  frida_menu_observe.py  frida_orig_control.js  frida_orig_frame.js  frida_orig_present.js  frida_present_path.js  frida_projmatrix.js  frida_recipe_click_run.py  frida_render_recipe.js  frida_render_recipe_3d_run.py  frida_render_recipe_d3d7.js  frida_render_recipe_d3d7_run.py  frida_render_recipe_run.py  (+10 more)
src/engine/: ActiveIndex.cpp  ActiveIndex.h  ActiveListInsert.cpp  ActiveListInsert.h  AddTextNode.cpp  AddTextNode.h  AngleDifference.cpp  AngleDifference.h  AnimFrameDelta.cpp  AnimFrameDelta.h  AnimationCalc.cpp  AnimationCalc.h  AntiCheatCheck.cpp  AntiCheatCheck.h  ArrayElementFree.cpp  ArrayElementFree.h  ArrayFillPattern.cpp  ArrayFillPattern.h  AssignBuffer.cpp  AssignBuffer.h  AsyncResultInit.cpp  AsyncResultInit.h  AudioNetworkUpdate.cpp  AudioNetworkUpdate.h  AudioSystem.cpp  AudioSystem.h  BigNumCompareEx.cpp  BigNumCompareEx.h  BigNumScalarMul.cpp  BigNumScalarMul.h  BitFieldExtract.cpp  BitFieldExtract.h  BitScanReverse.cpp  BitScanReverse.h  BitfieldTableWrite.cpp  BitfieldTableWrite.h  BitvectorShiftLeft.cpp  BitvectorShiftLeft.h  BoundingBoxCheck.cpp  BoundingBoxCheck.h  (+654 more)
src/main/: WinMain.cpp
src/renderer/: RendererLoader.cpp  RendererLoader.h  ShaderConstants.cpp  ShaderConstants.h  WaterSystem.cpp  WaterSystem.h
src/renderer_stub/: StubDef.def  StubRenderer.cpp
src/vfs/: VirtualFileSystem.cpp  VirtualFileSystem.h
src_vanilla/: VanillaAnim.cpp  VanillaAnim.h  VanillaAudio.cpp  VanillaAudio.h  VanillaBinLoader.cpp  VanillaBinLoader.h  VanillaBinLoaderFull.cpp  VanillaBinLoaderFull.h  VanillaBinStubs.cpp  VanillaBlit.cpp  VanillaBoot.h  VanillaD3D7Tex.cpp  VanillaEngine.cpp  VanillaEngine.h  VanillaFeed.cpp  VanillaFeed.h  VanillaFileIO.cpp  VanillaFileIO.h  VanillaFont.cpp  VanillaGBS.cpp  VanillaGBS.h  VanillaGTI.cpp  VanillaGTI.h  VanillaInput.cpp  VanillaInput.h  VanillaLinkage.cpp  VanillaLoadScreen.cpp  VanillaLoadScreen.h  VanillaLogo.cpp  VanillaLogo.h  VanillaMakeWorld.cpp  VanillaMakeWorld.h  VanillaObject.cpp  VanillaObject.h  VanillaOdef.cpp  VanillaOdef.h  VanillaPlacements.cpp  VanillaPlacements.h  VanillaRenderer.cpp  VanillaSceneDispatch.cpp  (+32 more)
stubs/: stubs.h
tasks/: CLAIMS.md
tools/: build.sh  capdiff.py  capture_menu.ps1  capture_proc.ps1  gbs_decode.py  gen_stubs.py  gzp_extract.py  run.sh
version_bridge/: ExportFunctions.java  HANDOFF.md  PATCH_LAYER_CLASSIFICATION.md  VERSION_MAP.csv  VERSION_MAP.md  VERSION_MAP_full.csv  VERSION_MAP_v2.csv  VERSION_MAP_v2.md  build_version_map.py  export_functions.py  match_fingerprint.py  match_vanilla_ps2.py  propagate_map.py  propagate_vanilla_ps2.py  recomp_functions.jsonl  triangulate.py  vanilla_functions.jsonl  vanilla_ps2_matches.csv  vanilla_ps2_matches_full.csv
